// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CustomerDetailsContainer /> should render correctly 1`] = `
<styled.div
  className="sc-gmeYpB jHEXZm"
/>
`;

exports[`<LinkedItems /> should render correctly 1`] = `
<div
  className="sc-kZmsYB nCVNo"
/>
`;

exports[`<Wrapper /> should render correctly 1`] = `
<styled.div
  className="sc-fcdeBU hSOJnx"
/>
`;
